# rbsf-carla-irobocity

./: .gitignore  Makefile  README.md  agent.py  pyproject.toml  run_leaderboard.sh  rviz_cfg.rviz  setup_carla.sh
deploy/: Dockerfile  Dockerfile.base  Dockerfile.carla  Dockerfile.racing  entrypoint.sh
src/carla_agent/: package.xml  setup.cfg  setup.py
src/carla_agent/carla_agent/: agent.py  agent_students.py  agent_unsolved.py  optional_callback.py
src/carla_agent/urdf/: car.urdf
src/carla_perception/: package.xml  setup.py
src/carla_perception/carla_perception/: perception_node.py  perception_node_student.py
src/stack_launcher/: package.xml  setup.py
src/stack_launcher/launch/: agent.launch.py  carla.launch.py  perception.launch.py
