[project]
name = "robocity_carla"
version = "1.0"
description = "Robocity Carla"
authors = [
    { name = "Miguel Antunes" },
    { name = "Fabio Sánchez" },
    { name = "Santiago Montiel" },
    { name = "Rodrigo Gutiérrez" }
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "addict>=2.4.0",
    "efficientnet-pytorch>=0.7.1",
    "hydra-core>=1.3.2",
    "imgaug>=0.4.0",
    "jaxtyping>=0.3.2",
    "laspy[laszip]>=2.7.0",
    "matplotlib>=3.10.6",
    "moviepy>=2.2.1",
    "numpy<2.0.0",
    "peft>=0.18.0",
    "pillow>=11.3.0",
    "pytorch-lightning>=2.5.0",
    "rootutils>=1.0.7",
    "segmentation-models-pytorch>=0.5.0",
    "setuptools==81",
    "timm>=1.0.21",
    "torch==2.8.0",
    "torchvision>=0.23.0",
    "ujson>=5.11.0",
    "pygame",
    "casadi",
    "pygeos",
    "ultralytics",
    "pyrootutils",
    "carla==0.9.15",
    "py-trees==0.8.3",
    "simple_watchdog_timer",
    "transforms3d",
    "dictor",
    "ephem",
    "ujson",
    "filterpy",
    "rdp",
    "jsonpickle",
    "gym>=0.26.2",
    "h5py>=3.16.0",
    "webcolors==1.5",
    "tabulate>=0.10.0",
    "scikit-learn>=1.7.2",
    "pyquaternion>=0.9.9",
]

[build-system]
requires = ["setuptools >= 77, <81", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["car1", "car1.*"]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu129" },
]
torchvision = [
  { index = "pytorch-cu129" },
]

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]


[tool.uv]
find-links = [
  "https://data.pyg.org/whl/torch-2.8.0+cu129.html"
]


