[project]
name = "robocity_carla"
version = "1.0"
description = "Robocity Carla"
authors = [
    { name = "Miguel Antunes" },
    { name = "Fabio Sánchez" },
    { name = "Santiago Montiel" },
    { name = "Rodrigo Gutiérrez" }
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy<2.0.0",
    "scipy",
    "torch==2.8.0",
    "torchvision>=0.23.0",
    "ultralytics",
    "carla==0.9.15",
]

[build-system]
requires = ["setuptools >= 77, <81", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
torch = [
  { index = "pytorch-cu129" },
]
torchvision = [
  { index = "pytorch-cu129" },
]

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]


[tool.uv]
find-links = [
  "https://data.pyg.org/whl/torch-2.8.0+cu129.html"
]


